panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__preprocessor__test_one_param_macro_called_with_zero_args.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/test_one_param_macro_called_with_zero_args.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_one_param_macro_called_with_zero_args.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition value~2 `int` (negate `int` (42 `int`)))
         (return (negate `int` (value~2 `int`))))))

----- stderr -----
